# TRGAN

./: README.md  pyproject.toml
TRGAN/: GAN.py  TRGAN.py  __init__.py  comparison.py  embedder.py  encoders.py  evaluation_metrics.py  feature_extractor.py  methods_comparison.py  time_generation.py  utils.py
TRGAN/cli/: train.py
TRGAN/dataset/: catalog.py  metadata.py
TRGAN/old/: TRGAN_train_load_modules.py
notebooks/: TRGAN_chech.ipynb  TRGAN_uk.ipynb
