[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "TRGAN"
version = "0.1.0"  
description = "Generating"
authors = ["Luciano Lorenti <lucicano.lorenti@movilitas.com>"]  
readme = "README.md"
license = "MIT"
keywords = ["optimization", "anylogic"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
packages = [
    { include = "TRGAN" },
]

[tool.poetry.dependencies]
torch = "^2.0.0"
pandas = "^1.0.0"
gdown


